<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_employee" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerSelectEmployee"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/etMonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/month"
        android:inputType="number" />

    <EditText
        android:id="@+id/etYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/year"
        android:inputType="number" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGenerate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_and_share_payslip" />
</LinearLayout>
